# amplifier-module-provider-litellm

./: .gitignore  README.md  pyproject.toml  smoke_test.py
amplifier_module_provider_litellm/: __init__.py  caching.py  capabilities.py  errors.py  request_build.py  response_parse.py
