[project]
name = "amplifier-module-provider-litellm"
version = "0.1.0"
description = "Amplifier provider module for a LiteLLM proxy (single front-door with per-model prompt caching, extended thinking, and reasoning round-tripping)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "httpx>=0.27.0",
]

[project.entry-points."amplifier.modules"]
provider-litellm = "amplifier_module_provider_litellm:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_litellm",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core>=1.3.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
